ui/apps/io.ox/core/viewer/style.less
/**
 * This work is provided under the terms of the CREATIVE COMMONS PUBLIC
 * LICENSE. This work is protected by copyright and/or other applicable
 * law. Any use of the work other than as authorized under this license
 * or copyright law is prohibited.
 *
 * http://creativecommons.org/licenses/by-nc-sa/2.5/
 *
 * © 2014 Open-Xchange Inc., Tarrytown, NY, USA. info@open-xchange.com
 *
 * @author Mario Schroeder <mario.schroeder@open-xchange.com>
 * @author Edy Haryono <edy.haryono@open-xchange.com>
 */

@viewer-text-color: #ffffff;
@viewer-background-color: rgba(0, 0, 0, 0.85);

@viewer-toolbar-height: 45px;
@viewer-toolbar-bgcolor: #000000;
@viewer-toolbar-filename-width: 400px;
@viewer-toolbar-hover-bgcolor: #333333;
@viewer-toolbar-active-bgcolor: #222222;
@viewer-toolbar-link-width: 60px;

@viewer-sidebar-bgcolor: #202020;
@viewer-sidebar-width: 400px;

@viewer-sidebar-description-max-height: 200px;

.io-ox-viewer {

    background-color: @viewer-background-color;
    z-index: 11; // just to one more than #io-ox-screens
    color: @viewer-text-color;

    ::-webkit-scrollbar {
        width: 8px;
    }
    ::-webkit-scrollbar-button {
        width: 8px;
        height:5px;
    }
    ::-webkit-scrollbar-track {
        background: #eee;
        border: thin solid lightgray;
        box-shadow: 0px 0px 3px #dfdfdf inset;
        border-radius:10px;
    }
    ::-webkit-scrollbar-thumb {
        background: #888;
        border: thin solid #707070;
        border-radius:10px;
    }
    ::-webkit-scrollbar-thumb:hover {
        background: #7d7d7d;
    }

    .viewer-toolbar {
        position: absolute;
        top: 0;
        width: 100%;
        height: @viewer-toolbar-height;
        line-height: @viewer-toolbar-height;
        background: @viewer-toolbar-bgcolor;
        box-shadow: 0px 2px 2px #000000;
        list-style: none;
        padding-left: 0;
        text-align: right;
        > li {
            display: inline-block;
            min-width: @viewer-toolbar-link-width;
            height: @viewer-toolbar-height;
            text-align: center;
            > a {
                display: inline-block;
                height: @viewer-toolbar-height;
                min-width: @viewer-toolbar-link-width;
                outline: none;
                text-decoration: none;
                color: #999999 !important;
                &:hover,
                &:focus,
                &:active {
                    color: #ffffff !important;
                    background-color: @viewer-toolbar-hover-bgcolor;
                }
            }

            > a.viewer-toolbar-filename {
                max-width: @viewer-toolbar-filename-width;
                padding: 0 20px;
                text-align: left;
                .ellipsis();
                i {
                    margin-right: 10px;
                    font-size: 16px;
                };
                i.fa-file-excel-o { color: #44B957; }
                i.fa-file-word-o { color: #1A9DD4; }
                i.fa-file-powerpoint-o { color: #EE5F37; }
                i.fa-file-pdf-o { color: #CF1E28; }
                i.fa-file-image-o { color: #EE5F37; }
            }
            > a.active { background-color: @viewer-toolbar-active-bgcolor ; }
            &.dropdown.open { background-color: @viewer-toolbar-active-bgcolor; }
            .dropdown-menu { margin: 0; }
        }
    }

    .viewer-displayer {
        position: absolute;
        top: @viewer-toolbar-height;
        width: 100%;
        bottom: 0;

        #viewer-carousel,
        .carousel-inner,
        .item {
            height: 100%;
        }

        .item {
            position:relative;
            outline: none;
            .viewer-displayer-image {
                position: absolute;
                top: 0;
                left: 0;
                bottom: 0;
                right: 0;
                margin: auto;
                display: none;
            }
            .viewer-displayer-caption {
                position: absolute;
                left: 0;
                right: 0;
                margin: auto;
                bottom: 40px;
                height: 40px;
                line-height: 40px;
                width: 100px;
                text-align: center;
                background: rgba(0,0,0,0.5);
                .border-radius(4px);
                display: none;
            }
            &.io-ox-busy::before { color: rgba(255, 255, 255, 0.3); }
        }

        .carousel-control {
            opacity: 0.3;
            background: none;
            i {
                position: absolute;
                top: 50%;
                font-size: 3rem;
                transform: translateY(-50%);
            }
            &.left i { left: 20px; }
            &.right i { right: 20px; }
            &:hover,
            &:focus {
                opacity: 1;
                background: none;
            }
        }

        .viewer-displayer-notification {
            position: absolute;
            top: 0;
            left: 0;
            bottom: 0;
            right: 0;
            margin: auto;
            height: 1em;
            text-align: center;
        }
    }

    .viewer-sidebar {
        position: absolute;
        top: 45px;
        right: 0;
        bottom: 0;
        width: @viewer-sidebar-width;
        padding: 1rem;
        background: @viewer-sidebar-bgcolor;
        display: none;
        box-shadow: inset 0px 2px 2px 0px #000000;
        overflow-y: auto;
        &.opened {
            display: block;
        }
    }

    .viewer-fileinfo,
    .viewer-filedescription,
    .viewer-fileversions {

        .panel {
            background-color: transparent;
            border-color: transparent;

            .panel-heading {
                color: #999999;
                border-color: #999999;
                background-color: transparent;
                position: relative;

                a.panel-heading-button {
                    color: @viewer-text-color;
                    position: absolute;
                    top: 4px;
                    right: 10px;
                }

                h3 {
                    font-weight: bold;
                }
            }

            .panel-body {

                dt {
                    color: #999999;
                }

                .versiontable {
                    white-space:nowrap;

                    .versionLabel {
                       max-width: 32px;
                       overflow: hidden;
                       i.fa {
                           margin-left: -2px;
                       }
                    }

                    td {
                        padding: 4px;
                        border-top: none;
                        border-bottom: 1px solid #555555;
                    }
                }

                .description {
                    max-height: @viewer-sidebar-description-max-height;

                    &.description-text {
                        color: @viewer-text-color;
                        background-color: transparent;
                        display: none;
                        width: 100%;

                        &.editmode {
                            display: block;
                        }
                    }
                    &.description-label {
                        display: block;
                        white-space: pre-wrap;
                        cursor: pointer;
                        overflow-y: auto;
                        padding: 3px;

                        &.editmode {
                            display: none;
                        }
                    }
                }
            }
        }
    }
}

